--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ aiohttp = "^3.6.2"
 numpy = "^1.19.1"
 scipy = "^1.5.1"
 aiocache = "^0.11.1"
+python-resize-image = "^1.1.19"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.1.4"
