--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   bot:
-    container_name: quote-bot-liberal
+    container_name: quote-bot-mos
     restart: unless-stopped
     build: .
     env_file:
